--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,6 @@
 header {
     background-color: #D6D6D6;
+    padding-top: 32px;
 }
 
 .container {
@@ -15,17 +16,17 @@ header p {
     font-size: 15px;
     line-height: 19px;
     color: white;
-
-
 }
 .d-flex {
     display: flex;
 }
-header li a {
+header ul li a {
     color: white;
-    font-size: 16px;
-    line-height: 22px;
-    text-decoration: none;
+    display: inline-block;
+    border-radius: 15px;
+    border: 1px;
+    solid-color: white;
+    margin-right: 23px;
 }
 header ul {
     display: flex;
