--- a/css/css.css
+++ b/css/css.css
@@ -24,9 +24,11 @@ header ul li a {
     color: white;
     display: inline-block;
     border-radius: 15px;
-    border: 1px;
     solid-color: white;
     margin-right: 23px;
+    border: 1px solid;
+    padding: 12px;
+
 }
 header ul {
     display: flex;
@@ -44,7 +46,6 @@ header ul {
     color: black;
     line-height: 55px;
     padding-top: 269px;
-    margin-bottom: 30px;
 }
 .slogan {
     color: black;
